fix css so it looks good on small screens

--- a/main.css
+++ b/main.css
@@ -26,10 +26,24 @@ button {
   width: 10rem;
   height: 4rem;
   text-decoration: none;
-  display: inline-flexbox;
   font-size: 16px;
 }
 
 .buttons {
   margin: 2em;
+}
+@media screen and (max-width: 600px) {
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+button {
+  margin: 2px;
+}
+p, #results {
+  color: green;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5em;
+}
 }
